Revert "<MultiSelect/> - fix bug where  scrollbar was always shown (#1843)"
This reverts commit e3c8b5a8fb08d10e41aad881247b97fb25ad343f.

--- a/src/MultiSelect/InputWithTags.scss
+++ b/src/MultiSelect/InputWithTags.scss
@@ -2,6 +2,7 @@
 
 .input {
   min-width: 30px;
+  margin: -1px;
 }
 
 .emptyInput {
@@ -30,7 +31,7 @@
 }
 
 .hasMaxHeight {
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 // Override <Input>'s default focus style
